--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img src="/img/robot.png">
+        <img src="/img/pic2.jpg">
     </div>
     {{>footer}}
 </body>
