--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p class="about">This site was developed by Sarath. It uses data from mapbox.com and darksky.net</p>
         <img src="/img/pic2.jpg">
     </div>
     {{>footer}}
