--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p class="about">Help yourself ;)</p>
     </div>
     {{>footer}}
 </body>
