--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,9 @@
         </form>
         <p id="p1"></p>
         <p id="p2"></p>
+        <p id="p3"></p>
+        <p id="p4"></p>
+        <p id="p5" class="date"></p>
     </div>
     {{>footer}}
       <script src="/js/app.js"></script>
